Require authentication for banor access

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,11 @@
     <%= flash[:errors] %>
   <% end %>
 
+  <%= flash[:notice] %>
+
   <%= yield %>
+
+  <%= render "shared/footer" unless @sign_in_page %>
 
 </body>
 </html>
