Add activation emails and admin rights

--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -8,6 +8,8 @@
 <br/><br/>
 <%= link_to "Create a new track", new_album_track_url(@album) %>
 <br/>
-<%= link_to "Delete album", album_url(@album), method: :delete %>
-<br/>
+<% if current_user.admin? %>
+  <%= link_to "Delete album", album_url(@album), method: :delete %>
+  <br/>
+<% end %>
 <%= link_to "Back to band", band_url(@album.band) %>
