--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,19 @@
 </head>
 <body>
 
-  <% if flash[:error].is_a?(Array) %>
-    <% flash[:error].each do |error| %>
-      <%= error %></br>
+  <div class="error">
+    <% if flash[:error].is_a?(Array) %>
+      <% flash[:error].each do |error| %>
+        <%= error %></br>
+      <% end %>
+    <% else %>
+      <%= flash[:errors] %>
     <% end %>
-  <% else %>
-    <%= flash[:errors] %>
-  <% end %>
+  </div>
 
-  <%= flash[:notice] %>
+  <div class="notice">
+    <%= flash[:notice] %>
+  </div>
 
   <%= yield %>
 
