--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -8,15 +8,31 @@
   <tr>
     <th>Album</th> <td> <%= @track.album.name %> </td>
   </tr>
-  <% @track.attributes.each do |attr, value| %>
-    <% next if ["created_at", "updated_at", "bonus", "album_id", "id"].include?(attr) %>
+  <tr>
+    <th>Lyrics</th> <td> <%= ugly_lyrics(@track.lyrics) %> </td>
+  </tr>
+</table>
+
+<br/>
+
+<table>
+  <% @track.notes.each do |note| %>
     <tr>
-      <th> <%= attr.capitalize %> </th> <td> <%= value %> </td>
+      <th> <%= note.user.email %> </th><td> <%= note.note %> </td>
+      <% if current_user == note.user || current_user.admin? %>
+        <td><%= link_to "Delete note", note_url(note), method: :delete %></td>
+      <% end %>
     </tr>
   <% end %>
 </table>
 
 <br/>
-<%= link_to "Delete track", track_url(@track), method: :delete %>
+
+<%= render "notes/form", track: @track %>
+
+<br/>
+<% if current_user.admin? %>
+  <%= link_to "Delete track", track_url(@track), method: :delete %>
+<% end %>
 <br/>
 <%= link_to "Back to album", album_url(@track.album) %>
