Add CSS for notices, fix redirect bug, add return link to admin page

--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,6 +1,7 @@
 <h1> <%= @album.name %> </h1>
 <br/>
 
+<h3>Tracks</h3>
 <% @album.tracks.each do |track| %>
   <h4><%= link_to track.title, track_url(track) %></h4>
 <% end %>
