--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -2,7 +2,7 @@
   <input type="hidden" name="_method" value="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
-  <label>Note
+  <label>Add a note!
     <textarea name="note[note]"></textarea>
   </label>
 
