--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,40 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+span.notice {
+  font-style: bold;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 10px solid #F4F4F4;
+  background: #F4F4F4;
+}
+
+span.error {
+  color: red;
+  font-style: bold;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background-color: #FFC6B8;
+  padding: 3px;
+}
+
+div.info {
+  padding: 20px;
+}
+
+table {
+  padding: 10px;
+  margin-bottom: 40px;
+}
+
+th {
+  padding: 3px;
+}
+
+td {
+  padding-right: 10px;
+  padding-left: 10px;
+}
